NetworkPolicy/Net1/ubuntu-deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: ubuntu1
  labels:
    allow-web1: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      allow-web1: "true"
  replicas: 1 
  template: 
    metadata:
      labels:
        allow-web1: "true"
    spec:
      containers:
      - name: nordri-container
        image: nordri/nordri-dev-tools
        command: ["/bin/sleep"]
        args: ["3600"]
